--- a/src/js/views/events/eventsList.html
+++ b/src/js/views/events/eventsList.html
@@ -12,6 +12,7 @@
       <div class="info">
         <img class="user-img" src="{{ events.profilePicture }}">
         <h3>{{ event.name }}</h3>
+        <p>Users interested: {{ event.usersInterested.length }}</p>
       </div>
     </li>
   </ul>
