--- a/public/js/views/events/eventsList.html
+++ b/public/js/views/events/eventsList.html
@@ -4,26 +4,28 @@
 </div>
 </div>
 
+
 <div class="container">
   <ul class="row">
     <h2 class="eventTitles" ng-hide="events.checkHosting">Hosting</h2>
     <li class="tile col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 eventBox" ng-repeat="event in events.events track by $index">
-      <img ui-sref="eventsShow({ id: event._id })" ng-src="{{ event.img }}">
+      <img ui-sref="eventsShow({ id: event._id })" src="{{ event.img }}">
       <div class="info">
-        <img class="user-img" src="{{ events.profilePicture }}">
+        <img class="user-img" src="{{ event.host._id }}">
         <h3>{{ event.name }}</h3>
-        <p>Users interested: {{ event.usersInterested.length }}</p>
+        <h3>{{ event.host._id }}</h3>
       </div>
     </li>
   </ul>
+
 </div>
-<h2 class="eventTitles" ng-hide="events.checkAttending">Attending</h2>
+<h2 class="eventTitles" ng-if="events.checkAttending">Attending</h2>
 <div class="container">
   <ul class="row">
     <li class="tile col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 eventBox" ng-repeat="event in events.requestsAccepted track by $index">
       <img ui-sref="eventsShow({ id: event.event._id })" src="{{ event.event.img }}">
       <div class="info">
-        <img class="user-img" ng-src="{{ event.receiver.profilePicture }}">
+        <img class="user-img" src="{{ event.event.host.profilePicture }}">
         <h3>{{ event.event.name }}</h3>
       </div>
     </li>
