--- a/public/js/views/events/index.html
+++ b/public/js/views/events/index.html
@@ -1,3 +1,40 @@
+<!-- <slick dots="false" prev-arrow="false" next-arrow="false" init-onload="true" data="events.events">
+<div class="tile" ng-repeat="event in events.events track by $index">
+<img src="{{ event.img }}">
+<div class="info">
+<h3>{{ event.name }}</h3>
+<img src="{{ event.host.profilePicture }}">
+<h4>{{ event.host.firstName }}</h4>
+</div>
+</div>
+</slick> -->
+
+<!-- Show -->
+<!-- <div class="tile" ng-repeat="event in events.events track by $index">
+<div class="header">
+<img src="{{ event.img }}">
+</div>
+<div class="user-img">
+<img src="{{ event.host.profilePicture }}" alt="">
+</div>
+<h5>{{ event.host.firstName}} {{ event.host.lastName }}</h5>
+<div class="event-info">
+<h2>{{ event.name }}</h2>
+</div>
+</div> -->
+
+<!-- Index -->
+
+<!-- <div class="row">
+<div class="tile col-md-6" ng-repeat="event in events.events track by $index">
+<img src="{{ event.img }}">
+<div class="info">
+<img class="user-img" src="{{ event.host.profilePicture }}">
+<h3>{{ event.name }}</h3>
+</div>
+</div>
+</div> -->
+
 <div class="container">
   <ul class="row">
     <li class="tile col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4" ng-repeat="event in events.events track by $index">
